2012-03-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: cbqos Plugin release 2.02.02

2011-09-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 2.01.01

2011-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* DevDiscover/CiscoIOS_cbQoS.pm (checkdevtype): SNMPv1 is
	explicitly unsupported

2011-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Collector/Cisco_cbQoS.pm (initTarget): bugfix: QoS maps were
	retrieved and deleted for every target token.

2011-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Collector/Cisco_cbQoS.pm: adapted to API change:
	replaced getHostname() with getHostHash()

2010-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* cisco.ios.cbqos.xml: implemented nodeid (only for CM summarries)

	* DevDiscover/CiscoIOS_cbQoS.pm: implemented node-display-name

2009-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* As of IOS 12.2(33)SRD1 and 12.2(33)SRD2, the object indexes
	are no longer unique across the whole router, but only within
	the policy map. The patch adapts the discovery module and collector
	to this change.

2008-08-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 1.6

2008-04-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Patch from Andrey Rouskol <arouskol@gldn.net>, allowing to use
	the same child policy name in several places inside a policy map.
	The configuration has to be re-discovered and re-compiled
	after installing the new version of plugin. The old QoS stats would
        be lost after the upgrade.

2007-11-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* DevDiscover/CiscoIOS_cbQoS.pm (buildChildrenConfigs):
	interfaces are filtered by $interface->{'excluded'}

2007-08-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 1.5

2007-04-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
