@@ -1,3 +1,8 @@
+2012-06-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* Collector/Cisco_cbQoS.pm (deleteTarget): reduced the number of
+	QoS map retrievals at collector startup
+
 2012-03-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: cbqos Plugin release 2.02.02
